client/src/configs/reset.css
*, *:before, *:after {
  box-sizing: border-box;
  margin: 0;
  font-size: 1em;
}

body {
  display: block;
  position: relative;
  width: 100vw;
  height: auto;
  min-height: 100vh;
  padding: 0;
  overflow: auto;
  font-size: 1vw;
}

#root {
  background-color: #f4e5ef;
}

a {
  text-decoration: none;
}

